# pto-isa

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  README_zh.md  opencode.json  pyproject.toml  setup.py
agents/: baseline_agent.md  memory_agent.md  optimizer_agent.md  pto_generator_agent.md  retrieval_agent.md  spec_agent.md  verifier_agent.md
agents/skills/pto-comm-isa-reference/: SKILL.md
agents/skills/pto-comm-isa-reference/references/: async-instructions.md  collective-instructions.md  core-types.md  p2p-instructions.md  signal-instructions.md
agents/skills/pto-comm-operator-develop/: SKILL.md
agents/skills/pto-comm-operator-develop/references/: development-patterns.md  host-build-system.md  multi-block-scheduling.md  signal-design.md
agents/skills/pto-comm-performance-optimization/: SKILL.md
agents/skills/pto-comm-performance-optimization/references/: data-transfer-optimization.md  overlap-design.md  profiling-methodology.md  sync-algorithm-optimization.md
agents/skills/pto-comm-testing-debug/: SKILL.md
agents/skills/pto-comm-testing-debug/references/: advanced-debug-tools.md  correctness-verification.md  test-environments.md  troubleshooting-guide.md
agents/skills/pto-costmodel-agentic-kernel-optimization/: README.md  remote.md  task.md
agents/skills/pto-costmodel-agentic-kernel-optimization/project_template/: ITERATIONS.md  TASK_REQUIREMENTS.md
agents/skills/pto-costmodel-agentic-kernel-optimization/project_template/runs/: README.md
agents/skills/pto-costmodel-agentic-kernel-optimization/project_template/runs/_template/: notes.md
agents/skills/pto-costmodel-agentic-kernel-optimization/project_template/workspace/: README.md
agents/skills/pto-costmodel-query-pto-cycles/: SKILL.md
agents/skills/pto-doc-update-pattern/: SKILL.md
agents/skills/pto-isa-operator-implementation/: SKILL.md
artifacts/kernels/add_relu/: v0_auto.pto  v0_auto_kernel.cpp  v0_metadata.json  v1_manual.pto
artifacts/reference/: add_relu_ref.py
artifacts/specs/: add_relu.kernel.json
benchmarks/: add_relu_shapes.json
cmake/: fetch_cann_cmake.cmake
docs/: PTOISA.md  PTOISA_zh.md
docs/automatic_kernel_generator/: DESIGN.md
docs/isa/tile/: reduce-and-expand.md  reduce-and-expand_zh.md
docs/isa/tile/ops/layout-and-rearrangement/: ttrans.md  ttrans_zh.md
docs/isa/tile/ops/reduce-and-expand/: tcolargmax.md  tcolargmax_zh.md  tcolargmin.md  tcolargmin_zh.md
docs_index/: README.md
docs_index/pto_instruction_cards/: copy_gm_to_ubuf.json  copy_ubuf_to_gm.json  copy_ubuf_to_ubuf.json  get_buf.json  get_scale_addr.json  manifest.json  mem_bar.json  mgather.json  mscatter.json  pand.json  pdintlv_b8.json  pge_b16.json  pge_b32.json  pge_b8.json  pintlv_b16.json  pipe_barrier.json  pld.json  pldi.json  plds.json  plt_b16.json  plt_b32.json  plt_b8.json  pnot.json  por.json  ppack.json  psel.json  pset_b16.json  pset_b32.json  pset_b8.json  pst.json  psti.json  psts.json  pstu.json  punpack.json  pxor.json  rls_buf.json  set_cross_core.json  set_flag.json  set_img2col_padding.json  set_img2col_rpt.json  (+244 more)
docs_index/target_profiles/: simulator.json
examples/add_relu/: README.md
include/pto/comm/a2a3/: TGet.hpp  TPut.hpp
include/pto/common/: constants.hpp  cpu_stub.hpp
include/pto/cpu/: ElementOp.h  TColMax.hpp  TColSum.hpp  TExtract.hpp  TInsert.hpp  TRSqrt.hpp  TRowExpandOp.hpp  TRowSum.hpp
include/pto/npu/a2a3/: TLoad.hpp  TMov.hpp  TPush.hpp  TRowExpandBinOp.hpp  TTrans.hpp
include/pto/npu/a5/: TAxpy.hpp  TColExpand.hpp  TColMax.hpp  TColMin.hpp  TColProd.hpp  TColReduceOps.hpp  TColSum.hpp  TDeQuant.hpp  TExtract.hpp  TGather.hpp  TMov.hpp  TPartAdd.hpp  TPartArgBinOps.hpp  TPartArgMax.hpp  TPartArgMin.hpp  TPartBinOps.hpp  TPartMax.hpp  TPartMin.hpp  TPartMul.hpp  TPush.hpp  TRowExpandAdd.hpp  TRowExpandBinOp.hpp  TRowExpandDiv.hpp  TRowExpandExpdif.hpp  TRowExpandMax.hpp  TRowExpandMin.hpp  TRowExpandMul.hpp  TRowExpandSub.hpp  TTrans.hpp  common.hpp
include/pto/npu/kirin9030/: TExtract.hpp  TGather.hpp
kernels/manual/a2a3/tget_bandwidth/: CMakeLists.txt  README.md  README_zh.md  run.sh  tget_bandwidth_kernel.cpp
mcp/ascend_env_mcp/: server.py
mcp/benchmark_mcp/: server.py
mcp/compile_run_mcp/: server.py
mcp/cost_model_mcp/: server.py
mcp/experience_bank_mcp/: server.py
mcp/profiler_mcp/: server.py
mcp/pto_docs_mcp/: server.py
tests/: run_st.sh
tests/cpu/st/testcase/: CMakeLists.txt
tests/cpu/st/testcase/tinsert_quant/: CMakeLists.txt  gen_data.py  main.cpp
tests/npu/a2a3/comm/st/testcase/tput/: tput_kernel.cpp
tests/npu/a2a3/src/st/testcase/: CMakeLists.txt
tests/npu/a2a3/src/st/testcase/syncall/: gen_data.py  main.cpp  syncall_aic_hard_kernel.cpp  syncall_aic_kernel.cpp  syncall_core_config.hpp  syncall_kernel.cpp  syncall_mix_1_1_kernel.cpp  syncall_mix_1_2_kernel.cpp  syncall_mix_common.hpp  syncall_soft_kernel.cpp
tests/npu/a2a3/src/st/testcase/tfillpad/: tfillpad_kernel.cpp
tests/npu/a2a3/src/st/testcase/tload_gm2mat/: gen_data.py  main.cpp  tload_gm2mat_kernel.cpp
tests/npu/a2a3/src/st/testcase/ttrans_3d/: CMakeLists.txt  gen_data.py  main.cpp  ttrans_3d_kernel.cpp
tests/npu/a5/comm/st/testcase/tget/: main.cpp  tget_kernel.cpp
tests/npu/a5/comm/st/testcase/tput/: main.cpp
tests/npu/a5/src/st/testcase/mgather/: MGATHER.md  main.cpp  mgather_kernel.cpp
tests/npu/a5/src/st/testcase/mscatter/: MSCATTER.md  gen_data.py  main.cpp  mscatter_kernel.cpp
tests/npu/a5/src/st/testcase/ttrans/: gen_data.py  main.cpp  ttrans_kernel.cpp
tests/npu/kirin9030/src/st/testcase/taxpy/: main.cpp
tests/npu/kirin9030/src/st/testcase/tcmp/: gen_data.py  main.cpp  tcmp_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tcmps/: gen_data.py  main.cpp  tcmps_kernel.cpp
tests/npu/kirin9030/src/st/testcase/tdiv/: main.cpp
tests/script/: run_st.py
tools/: check_pto_static.py  compare_outputs.py  discover_env.py  extract_pto_docs.py  generate_kernel.py  profile_kernel.py  run_kernel.py
tools/akg/: __init__.py  baseline.py  generator.py  mcp_stdio.py  mcp_tools.py  pto_docs.py  spec.py
(+2 files in other folders)
