# --------------------------------------------------------------------------------
# Copyright (c) 2025 Huawei Technologies Co., Ltd.
# This program is free software, you can redistribute it and/or modify it under the terms and conditions of
# CANN Open Software License Agreement Version 2.0 (the "License").
# Please refer to the License for details. You may not use this file except in compliance with the License.
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
# INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
# See LICENSE in the root of the software repository for the full text of the License.
# --------------------------------------------------------------------------------

function(pto_cpu_sim_st NAME)
    set(FILES_LIST main.cpp)
    if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${NAME}_kernel.cpp)
        list(APPEND FILES_LIST ${NAME}_kernel.cpp)
    endif()
    add_executable(${NAME} ${FILES_LIST})
    target_compile_options(${NAME} PRIVATE ${CMAKE_CPP_COMPILE_OPTIONS} -std=c++${CMAKE_CXX_STANDARD})
    target_include_directories(${NAME} PRIVATE
        ${PROJECT_SOURCE_DIR}/../../../include/
        ${PROJECT_SOURCE_DIR}/../../../include/common
        ${PROJECT_SOURCE_DIR}/../stubs
        ${PROJECT_SOURCE_DIR}/../../common
    )

    target_link_libraries(${NAME} PRIVATE
        ${PTO_CPU_SIM_GTEST_MAIN_TARGET}
        Threads::Threads
    )
    if (UNIX)
        target_link_libraries(${NAME} PRIVATE m)
    endif()
    if (UNIX AND NOT APPLE)
        target_link_libraries(${NAME} PRIVATE dl)
    endif()
endfunction()

find_package(Threads REQUIRED)

set(ALL_TESTCASES
hashfind
mgather
mscatter
setgetval
tabs
tadd
taddc
tadds
taddsc
tassign_alias
tand
tands
targreduceop
taxpy
tbroadcast
tci
tcmp
tcmps
tcolexpand
tcolexpandop
tcolmax
tcolmin
tcolprod
tcolreduceidx
tcolsum
tconcat
tcvt
tdequant
tdiv
tdivs
texp
texpands
textract
textract_quant
tfillpad
tflashattn
tfmod
tfmods
tgather
tgatherb
tget
tget_async
tget_scale_addr
tgetscaleaddr
thistogram
timg2col
tinsert
tinsert_quant
tload
tloadconv
tlog
tlrelu
tmatmul
tmatmul_layout
#tmatmul_mx
tmax
tmaxs
tmin
tmins
tmov
tmrgsort
tmul
tmuls
tneg
tnot
tnotify
tor
tors
tpartadd
tpartmul
tpartargmax
tpartargmin
tpartmax
tpartmin
tpow
tpows
tprefetch
tprelu
tpushpop
tput
tput_async
tquant
trandom
trecip
treduce
trelu
trem
trems
treshape
trowexpand
trowexpandop
trowmax
trowmin
trowreduceidx
trowsum
trowprod
trsqrt
tscatter
tsel
tsels
tshl
tshls
tshr
tshrs
tsort32
tsqrt
tstore
tstore_quant
tsub
tsubview
tsubc
tsubs
tsubsc
ttest
ttrans
ttri
ttrace
twait
txor
txors
tpushpop_cv_nosplit
tpushpop_cv
tpushpop_vc_nosplit
)

foreach(TESTCASE ${ALL_TESTCASES})
    if(NOT DEFINED TEST_CASE OR TEST_CASE STREQUAL "${TESTCASE}")
        add_subdirectory(${TESTCASE})
    endif()
endforeach()
